--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="root"></div>
     <div class="arrows"><p class="arrows__text">On PC use arrow keys to steer.</p></div>
-    <script src="./index.js" type="module"></script>
-    <!-- <script src="./main.js"></script> -->
+    <!-- <script src="./index.js" type="module"></script> -->
+    <script src="./main.js"></script>
   </body>
 </html>
