--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="root"></div>
     <div class="arrows"><p class="arrows__text">On PC use arrow keys to steer.</p></div>
     <!-- <script src="./index.js" type="module"></script> -->
-    <script src="./main.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
